# OpenGLGetSarted

./: CMakeLists.txt
include/common/: Light.h  Mesh.h  Model.h  MyShaderProgram.h  Skybox.h  Text.h
include/glad/: glad.h
shaders/: lightFrag.frag  lightVertex.vert  reflectFrag.frag  reflectVertex.vert  simpleFragUnlit.frag  simpleFragmentShader.frag  simpleVertexShader.vert
src/: Main.cpp
src/common/: Light.cpp  Mesh.cpp  Model.cpp  MyShaderProgram.cpp  Skybox.cpp  Text.cpp  stb_image.cpp
src/glad/: glad.c
